Sutter Health/src/objects/Failed_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <label>Contact Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed_Successfully__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed Successfully</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Failed Contact</label>
    <nameField>
        <displayFormat>FCN-{0000}</displayFormat>
        <label>Failed Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Failed Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>